# rasdaman

./: .arcconfig  .astylerc  .clang-format  .editorconfig  .gitattributes  .gitignore  .gitmodules  BUILD.txt  CMakeLists.txt  INSTALL  Makefile.am  Makefile.in  aclocal.m4  config-cmake.h.in  config.h.in  configure  configure.ac  patch1954  patch2066  version.h.in
applications/: CMakeLists.txt  Makefile.am  Makefile.in
catalogmgr/: CMakeLists.txt  Makefile.am  Makefile.in  algebraops.cc  algebraops.hh  autogen_ops.cc  autogen_ops.hh  nullvalues.cc  nullvalues.hh  ops.cc  ops.hh  typeenum.hh  typefactory.cc  typefactory.hh
clientcomm/: CMakeLists.txt  Makefile.am  Makefile.in  clientcomm.cc  clientcomm.hh  clientcomm_RNPdefault.cc  clientcomm_RPCdefault.cc  clnt_control.c  clnt_control.h  rasnetclientcomm.cc  rasnetclientcomm.hh  rpcclientcomm.cc  rpcclientcomm.hh  rpcif.h  rpcif.h.awk  rpcif.h.awk_dec2  rpcif.x  rpcif_clnt.c.awk  rpcif_clnt.cc  rpcif_svc.c.awk  rpcif_svc.cc  rpcif_xdr.cc.awk
common/: CMakeLists.txt
conversion/: CMakeLists.txt  Makefile.am  Makefile.in  bmp.cc  bmp.hh  colormap.cc  colormap.hh  convertor.cc  convertor.hh  convfactory.cc  convfactory.hh  convtypes.hh  convutil.cc  convutil.hh  csv.cc  csv.hh  dem.cc  dem.hh  ecw.cc  ecw.hh  ecwmemfs.cc  formatparamkeys.hh  formatparams.cc  formatparams.hh  gdal.cc  gdal.hh  gdalincludes.hh  gdalreprojection.cc  gdalreprojection.hh  graphic.cc  grib.cc  grib.hh  hdf.cc  hdf.hh  hdfincludes.hh  image.cc  int16.cc  jpeg.cc  jpeg.hh  json.cc  (+25 more)
httpserver/: CMakeLists.txt  Makefile.in  childs.cc  config.cc  defs.h  http-date.cc  http-defs.h  http-doit.cc  http-error.cc  http-fields.cc  http-methods.cc  http-readmsg.cc  http-support.cc  http-writemsg.cc  http.cc  http.h  httpserver.h  init.cc  logging.cc  main.cc  protos.h  server.h  signals.cc  support.cc  types.h
java/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in  generate_errtxts_messages.sh  pom.xml  pom.xml.in
lockmgr/: CMakeLists.txt  Makefile.am  ecpg_lockmanager.hh  ecpg_lockmanager.pgc  ecpg_lockmanager.sc  lockmanager.cc  lockmanager.hh
manuals_and_examples/: CMakeLists.txt  Makefile.am  Makefile.in  doxygen-all.cfg  doxygen-all.cfg.in  doxygen-api.cfg  doxygen-api.cfg.in  doxygen-basedbms.cfg  doxygen-basedbms.cfg.in  doxygen-server.cfg.in
mymalloc/: CMakeLists.txt  Makefile.in  mymalloc.h  mymalloc_cln.cc  mymalloc_svc.cc
network/: CMakeLists.txt  Makefile.in  akgnet_commbuffer.cc  akgnet_commbuffer.hh  akgnet_common.hh  akgnet_fdescr.cc  akgnet_fdescr.hh  akgnet_file.cc  akgnet_file.hh  akgnet_inetaddr.cc  akgnet_inetaddr.hh  akgnet_nbcomm.cc  akgnet_nbcomm.hh  akgnet_selector.cc  akgnet_selector.hh  akgnet_server.cc  akgnet_server.hh  akgnet_socket.cc  akgnet_socket.hh  akgnetwork.hh
qlparser/: CMakeLists.txt  Makefile.am  Makefile.in  algebraops.cc  algebraops.hh  alloca.c  alloca.cc  autogen_qtui.cc  autogen_qtui.hh  autogen_qtui.icc  gdaldataconverter.cc  gdaldataconverter.hh  gdalincludes.hh  lex.ll  oql.yy  parseinfo.cc  parseinfo.hh  parseinfo.icc  qtatomicdata.cc  qtatomicdata.hh  qtbinaryfunc.cc  qtbinaryfunc.hh  qtbinaryfunc.icc  qtbinaryinduce.cc  qtbinaryinduce.hh  qtbinaryinduce.icc  qtbinaryinduce2.cc  qtbinaryinduce2.hh  qtbinaryinduce2.icc  qtbinaryoperation.cc  qtbinaryoperation.hh  qtbinaryoperation.icc  qtcaseequality.cc  qtcaseequality.hh  qtcaseop.cc  qtcaseop.hh  qtcaseop.icc  qtcelltypeattributes.cc  qtcelltypeattributes.hh  qtclippingfunc.cc  (+191 more)
rascontrol/: CMakeLists.txt  Makefile.am  Makefile.in  rascontrol.cc  rascontrol.hh  rascontrol_class.cc  rasmgr_tester.cc  rasmgr_tester.hh  rasmgr_utils_comm.cc  rasmgr_utils_comm.hh  rasmgr_utils_conf.cc  rasmgr_utils_conf.hh  raspasswd.cc  raspasswd.hh
rasdl/: CMakeLists.txt  Makefile.am  Makefile.in  alloca.cc  lex.ll  odl.yy  parse.cc  parse.hh  rasdl.cc  rasdl_error.cc  rasdl_error.hh  rasdlgrammar.html  symbtbl.cc  symbtbl.hh  template_inst.hh  yparse.hh
raslib/: CMakeLists.txt  Makefile.am  Makefile.in  attribute.cc  attribute.hh  banditerator.cc  banditerator.hh  basetype.cc  basetype.hh  collectiontype.cc  collectiontype.hh  commonutil.cc  commonutil.hh  complex.cc  complex.hh  complextype.cc  complextype.hh  dlist.cc  dlist.hh  endian.cc  endian.hh  error.cc  error.hh  error.icc  flatbasetype.cc  flatbasetype.hh  itertype.cc  itertype.hh  log_config.cc  log_config.hh  marraytype.cc  marraytype.hh  mddtypes.cc  mddtypes.hh  memblockvec.cc  memblockvec.hh  metaobject.cc  metaobject.hh  minterval.cc  minterval.hh  (+70 more)
rasmgr/: CMakeLists.txt  Makefile.am  Makefile.in  hostcmp.cc  ras_crypto.cc  ras_crypto.hh  rasmgr.hh  rasmgr_comm.cc  rasmgr_comm_nb.cc  rasmgr_comm_nb.hh  rasmgr_config.cc  rasmgr_config.hh  rasmgr_dbm.cc  rasmgr_dbm.hh  rasmgr_error.cc  rasmgr_error.hh  rasmgr_host.cc  rasmgr_host.hh  rasmgr_localsrv.cc  rasmgr_localsrv.hh  rasmgr_main.cc  rasmgr_master.hh  rasmgr_master_nb.cc  rasmgr_protocol.hh  rasmgr_random.cc  rasmgr_rascontrol.cc  rasmgr_rascontrol.hh  rasmgr_rascontrol_help.cc  rasmgr_srv.cc  rasmgr_srv.cc.ORIG  rasmgr_srv.hh  rasmgr_users.cc  rasmgr_users.hh
rasnet/: CMakeLists.txt  Makefile.am
rasodmg/: CMakeLists.txt  Makefile.am  Makefile.in  alignedtiling.cc  alignedtiling.hh  alignedtiling.icc  collection.cc  collection.hh  collection.icc  database.cc  database.hh  database.icc  dirdecompose.cc  dirdecompose.hh  dirtiling.cc  dirtiling.hh  genreftype.hh  gmarray.cc  gmarray.hh  gmarray.icc  interesttiling.cc  interesttiling.hh  iterator.cc  iterator.hh  iterator.icc  marray.cc  marray.hh  marray.icc  object.cc  object.hh  object.icc  oqlquery.cc  oqlquery.hh  oqlquery.icc  partinsert.cc  partinsert.hh  polycutout.cc  polycutout.hh  polygon.cc  polygon.hh  (+16 more)
reladminif/: CMakeLists.txt  Makefile.am  Makefile.in  adminif.hh  adminif.pgc  adminif.sc  adminifcommon.cc  binaryrepresentation.hh  databaseif.hh  databaseif.pgc  databaseif.sc  databaseifcommon.cc  dbnamedobject.cc  dbnamedobject.hh  dbobject.cc  dbobject.hh  dbobjectiditerator.cc  dbobjectiditerator.hh  dbobjectiterator.cc  dbobjectiterator.hh  dbref.cc  dbref.hh  eoid.cc  (+22 more)
(+11373 files in other folders)
